Fix CSS to allow line breaks in open question feedback while keeping input fields inline

--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -1690,16 +1690,24 @@ select.answer-select-inline.answer-incorrect {
     line-height: 1.5;
 }
 
-/* Prevent inline input fields from breaking to new lines in feedback */
-.question-feedback-message p {
+/* Prevent inline input fields from breaking to new lines in open question text */
+.open-question-text p {
     display: inline;
     margin: 0;
 }
 
-.question-feedback-message br {
+.open-question-text br {
     display: none;
 }
 
+.open-question-text input.answer-input-inline,
+.open-question-text .open-question-input {
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0 3px;
+}
+
+/* Keep feedback input fields inline but allow line breaks between field feedbacks */
 .question-feedback-message input.answer-input-inline,
 .question-feedback-message .open-question-input {
     display: inline-block;
